--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2018"
 documentation = "https://docs.rs/crate/parsec-client"
 
 [dependencies]
-parsec-interface = "0.26.0"
+parsec-interface = {git = "https://github.com/ionut-arm/parsec-interface-rs.git", branch = "attested-tls"}
 num = "0.3.0"
 log = "0.4.11"
 derivative = "2.1.1"
